--- a/partial/nav.html
+++ b/partial/nav.html
@@ -2,8 +2,12 @@
   <h1>{{ site_title|e|upper }}</h1>
   <nav>
     <ul>
-      {% for item in config.nav_items %}
-      <li><a href="{{ item.url }}" {% if current_page.url == item.url %}class="active"{% endif %}>{{ item.title|e|upper }}</a></li>
+      <li><a href="index" {% if current_page.url == '' %}class="active"{% endif %}>HOME</a></li>
+      {% for page in pages %}
+        {# dont show my home page because of alpha sorting #}
+        {% if page.title != 'Home' %}
+        <li><a href="{{ page.url }}" {% if current_page.url == page.url %}class="active"{% endif %}>{{ page.title|e|upper }}</a></li>
+        {% endif %}
       {% endfor %}
     </ul>
   </nav>
