--- a/src/styles/z_site.scss
+++ b/src/styles/z_site.scss
@@ -1,10 +1,5 @@
 @import "imports/__normalize";
 
-// [class^="icon"] {
-//   position: relative;
-//   top: 0.1em;
-// }
-
 @font-face {
   font-family: 'Cubano';
   src: url('webfont/cubano-regular-webfont.eot');
@@ -16,20 +11,12 @@
   font-style: normal;
 }
 
-@mixin placeholder {
-  &.placeholder { @content; }
-  &:-moz-placeholder { @content; }
-  &::-moz-placeholder { @content; }
-  &::-webkit-input-placeholder { @content; }
+.clearfix {
+  @include clearfix();
 }
 
-@mixin fade($start) {
-  opacity: $start;
-  -webkit-backface-visibility: hidden;
-  transition: opacity 0.2s ease;
-  &:hover {
-    opacity: 1;
-  }
+*, *:after, *:before {
+  @include box-sizing(border-box);
 }
 
 $main-dark: #232323;
@@ -41,21 +28,15 @@ html {
 
 body {
   font: normal normal normal 16px/1 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -webkit-overflow-scrolling: touch;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
   color: $main-dark;
   overflow-x: hidden;
   background: white;
+  -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
-}
-
-*, *:after, *:before {
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 .container {
@@ -64,20 +45,6 @@ body {
   margin: 0 auto;
 }
 
-.clearfix:before,
-.clearfix:after {
-  content: " ";
-  display: table;
-}
-
-.clearfix:after {
-  clear: both;
-}
-
-/* IE6/7 support */
-.clearfix {
-  *zoom: 1;
-}
 
 a, a:visited {
   text-decoration: none;
